src/CalcManagerManaged/CalcManagerPort/Interop/CalcEngine_CWrapper.h


typedef struct CalcManager_t* CalcManagerHandle;
typedef struct CalcRational_t* CalcRationalHandle;
typedef struct CalcHistoryItem_t* CalcHistoryItemHandle;
typedef struct CalcHistoryItems_t* CalcHistoryItemsHandle;
typedef struct CalcCommandSnapshot_t* CalcCommandSnapshotHandle;
typedef enum {
    CALC_ERR_SUCCESS = 0,
    CALC_ERR_INVALID_PARAM = 0x80070057,
    CALC_ERR_OUT_OF_MEMORY = 0x8007000E,
    CALC_ERR_DIVIDE_BY_ZERO = 0x80000000,
    CALC_ERR_DOMAIN = 0x80000001,
    CALC_ERR_UNDEFINED = 0x80000002,
    CALC_ERR_POSITIVE_INFINITY = 0x80000003,  
    CALC_ERR_NEGATIVE_INFINITY = 0x80000004,  
    CALC_ERR_INVALID_RANGE = 0x80000006,      
    CALC_ERR_OVERFLOW = 0x80000008,
    CALC_ERR_NO_RESULT = 0x80000009           
} CalcError;
typedef enum {
    CALC_MODE_STANDARD = 0,
    CALC_MODE_SCIENTIFIC = 1,
    CALC_MODE_PROGRAMMER = 2
} CalcMode;
typedef enum {
    CALC_ANGLE_DEGREES = 0,
    CALC_ANGLE_RADIANS = 1,
    CALC_ANGLE_GRADIANS = 2
} CalcAngleType;
typedef enum {
    CALC_RADIX_HEX = 0,
    CALC_RADIX_DECIMAL = 1,
    CALC_RADIX_OCTAL = 2,
    CALC_RADIX_BINARY = 3
} CalcRadixType;
typedef enum {
    CALC_NUM_FORMAT_FLOAT = 0,
    CALC_NUM_FORMAT_SCIENTIFIC = 1,
    CALC_NUM_FORMAT_ENGINEERING = 2
} CalcNumberFormat;
struct ExpressionToken {
    char* text;
    int type;
};
struct ExpressionCommand {
    int commandType;
    char* token;
};
typedef void (*CalcDisplayCallback)(const char* displayString, bool isError, void* context);
typedef void (*CalcHistoryCallback)(uint32_t addedItemIndex, void* context);
typedef char* (*ResourceProviderCallback)(const char* resourceId, void* context);
typedef void (*CalcSetIsInErrorCallback)(bool isError, void* context);
typedef void (*CalcSetExpressionDisplayCallback)(ExpressionToken* tokens, long tokenCount, void* context);
typedef void (*CalcSetParenthesisNumberCallback)(unsigned int count, void* context);
typedef void (*CalcOnNoRightParenAddedCallback)(void* context);
typedef void (*CalcMaxDigitsReachedCallback)(void* context);
typedef void (*CalcBinaryOperatorReceivedCallback)(void* context);
typedef void (*CalcSetMemorizedNumbersCallback)(const char** numbers, int count, void* context);
typedef void (*CalcMemoryItemChangedCallback)(unsigned int indexOfMemory, void* context);
typedef void (*CalcInputChangedCallback)(void* context);
CALC_API CalcManagerHandle Calc_CreateManager(
        CalcDisplayCallback displayCallback,
        CalcHistoryCallback historyCallback,
        ResourceProviderCallback resourceCallback,
        CalcSetIsInErrorCallback isInErrorCallback,
        CalcSetExpressionDisplayCallback expressionDisplayCallback,
        CalcSetParenthesisNumberCallback parenthesisNumberCallback,
        CalcOnNoRightParenAddedCallback noRightParenCallback,
        CalcMaxDigitsReachedCallback maxDigitsCallback,
        CalcBinaryOperatorReceivedCallback binaryOpCallback,
        CalcSetMemorizedNumbersCallback memorizedNumbersCallback,
        CalcMemoryItemChangedCallback memoryItemCallback,
        CalcInputChangedCallback inputChangedCallback,
        void* context);
CALC_API void Calc_DestroyManager(CalcManagerHandle handle);
CALC_API CalcError Calc_SendCommand(CalcManagerHandle handle, int commandId);
CALC_API CalcError Calc_SetMode(CalcManagerHandle handle, CalcMode mode);
CALC_API CalcError Calc_Reset(CalcManagerHandle handle, bool clearMemory);
CALC_API CalcError Calc_SetRadix(CalcManagerHandle handle, CalcRadixType radixType);
CALC_API CalcError Calc_SetPrecision(CalcManagerHandle handle, int32_t precision);
CALC_API char* Calc_GetDisplayString(CalcManagerHandle handle);
CALC_API CalcError Calc_IsInError(CalcManagerHandle handle, bool* isError);
CALC_API CalcError Calc_IsInputEmpty(CalcManagerHandle handle, bool* isEmpty);
CALC_API void Calc_FreeString(char* str);
CALC_API CalcError Calc_MemorizeNumber(CalcManagerHandle handle);
CALC_API CalcError Calc_MemorizedNumberLoad(CalcManagerHandle handle, uint32_t memoryIndex);
CALC_API CalcError Calc_MemorizedNumberAdd(CalcManagerHandle handle, uint32_t memoryIndex);
CALC_API CalcError Calc_MemorizedNumberSubtract(CalcManagerHandle handle, uint32_t memoryIndex);
CALC_API CalcError Calc_MemorizedNumberClear(CalcManagerHandle handle, uint32_t memoryIndex);
CALC_API CalcError Calc_MemorizedNumberClearAll(CalcManagerHandle handle);
CALC_API CalcHistoryItemsHandle Calc_GetHistoryItems(
        CalcManagerHandle handle,
        CalcMode mode);
CALC_API CalcError Calc_GetHistoryItemCount(
        CalcHistoryItemsHandle historyItems,
        uint32_t* count);
CALC_API CalcHistoryItemHandle Calc_GetHistoryItem(
        CalcHistoryItemsHandle historyItems,
        uint32_t index);
CALC_API char* Calc_GetHistoryItemExpression(CalcHistoryItemHandle historyItem);
CALC_API char* Calc_GetHistoryItemResult(CalcHistoryItemHandle historyItem);
CALC_API void Calc_ReleaseHistoryItems(CalcHistoryItemsHandle historyItems);
CALC_API CalcError Calc_ClearHistory(CalcManagerHandle handle);
CALC_API CalcRationalHandle Calc_CreateRationalFromInt32(int32_t value);
CALC_API CalcRationalHandle Calc_CreateRationalFromString(
        const char* valueStr,
        uint32_t radix,
        int32_t precision);
CALC_API void Calc_DestroyRational(CalcRationalHandle rational);
CALC_API char* Calc_RationalToString(
        CalcRationalHandle rational,
        uint32_t radix,
        CalcNumberFormat format,
        int32_t precision);
CALC_API CalcError Calc_RationalToInt32(
        CalcRationalHandle rational,
        uint32_t radix,
        int32_t precision,
        int32_t* value);
CALC_API CalcError Calc_RationalToUInt64(
        CalcRationalHandle rational,
        uint32_t radix,
        int32_t precision,
        uint64_t* value);
CALC_API CalcRationalHandle Calc_RationalAdd(
        CalcRationalHandle a,
        CalcRationalHandle b,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalSubtract(
        CalcRationalHandle a,
        CalcRationalHandle b,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalMultiply(
        CalcRationalHandle a,
        CalcRationalHandle b,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalDivide(
        CalcRationalHandle a,
        CalcRationalHandle b,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalMod(
        CalcRationalHandle a,
        CalcRationalHandle b);
CALC_API CalcRationalHandle Calc_RationalNegate(CalcRationalHandle rational);
CALC_API CalcError Calc_RationalEquals(
        CalcRationalHandle a,
        CalcRationalHandle b,
        int32_t precision,
        bool* result);
CALC_API CalcError Calc_RationalCompare(
        CalcRationalHandle a,
        CalcRationalHandle b,
        int32_t precision,
        int* result);
CALC_API CalcRationalHandle Calc_RationalSin(
        CalcRationalHandle rational,
        CalcAngleType angleType,
        uint32_t radix,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalCos(
        CalcRationalHandle rational,
        CalcAngleType angleType,
        uint32_t radix,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalTan(
        CalcRationalHandle rational,
        CalcAngleType angleType,
        uint32_t radix,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalSqrt(
        CalcRationalHandle rational,
        uint32_t radix,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalPow(
        CalcRationalHandle base,
        CalcRationalHandle exponent,
        uint32_t radix,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalRoot(
        CalcRationalHandle value,
        CalcRationalHandle root,
        uint32_t radix,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalFact(
        CalcRationalHandle rational,
        uint32_t radix,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalLn(
        CalcRationalHandle rational,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalLog10(
        CalcRationalHandle rational,
        int32_t precision);
CALC_API CalcRationalHandle Calc_RationalExp(
        CalcRationalHandle rational,
        uint32_t radix,
        int32_t precision);
CALC_API char Calc_GetDecimalSeparator(CalcManagerHandle handle);
CALC_API CalcError Calc_MemorizeNumber(CalcManagerHandle handle);
CALC_API CalcError Calc_MemorizedNumberLoad(CalcManagerHandle handle, uint32_t memoryIndex);
CALC_API CalcError Calc_MemorizedNumberAdd(CalcManagerHandle handle, uint32_t memoryIndex);
CALC_API CalcError Calc_MemorizedNumberSubtract(CalcManagerHandle handle, uint32_t memoryIndex);
CALC_API CalcError Calc_MemorizedNumberClear(CalcManagerHandle handle, uint32_t memoryIndex);
CALC_API CalcError Calc_MemorizedNumberClearAll(CalcManagerHandle handle);
CALC_API CalcError Calc_GetMemorizedNumbers(
        CalcManagerHandle handle,
        uint32_t* count,
        char** buffer,
        uint32_t bufferSize);
CALC_API CalcCommandSnapshotHandle Calc_GetDisplayCommandsSnapshot(CalcManagerHandle handle);
CALC_API CalcError Calc_GetCommandSnapshotSize(CalcCommandSnapshotHandle snapshot, uint32_t* count);
CALC_API CalcError Calc_GetCommandFromSnapshot(
        CalcCommandSnapshotHandle snapshot, 
        uint32_t index, 
        ExpressionCommand* command);
CALC_API void Calc_ReleaseCommandSnapshot(CalcCommandSnapshotHandle snapshot);